--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@jongleberry/google-lighthouse-ci",
   "version": "1.0.0",
   "private": true,
-  "description": "Run Google Lighthouse CI once a day to collect performance metrics.",
+  "description": "Runs Google Lighthouse CI using GitHub Workflows",
   "author": "Jonathan Ong <me@jongleberry.com>",
   "license": "MIT",
   "homepage": "https://github.com/jonathanong/google-lighthouse-ci#readme",
